--- a/css/styles.css
+++ b/css/styles.css
@@ -1,56 +1,99 @@
 ﻿body {
-font-family: 'Roboto', sans-serif;
-background-color: #14131A;
-color: #fff;
+  font-family: 'Roboto', sans-serif;
+  color: #fff;
 }
 
 .container {
-max-width: 1140px;
-margin: auto;
+  max-width: 1140px;
+  margin: auto;
 }
 
 .header {
-display: flex;
-align-items: center;
-padding-top: 40px;
-margin-bottom: 80px;
+  display: flex;
+  align-items: center;
+  padding-top: 40px;
+  margin-bottom: 80px;
 }
 
 .logo-link {
-display: inline-block;
-margin-right: 50px;
+  display: inline-block;
+  margin-right: 50px;
 }
 
 .nav-menu {
-margin: 0;
-padding: 0;
-list-style: none;
-display: flex;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
 }
 
 .nav-menu-item {
-margin-right: 30px;
+  margin-right: 30px;
 }
 
 .nav-menu-link {
-margin: 0;
-text-decoration: none;
-color: rgba(255, 255, 255, 0.5);      
+  margin: 0;
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.5);
 }
 
 .film-date {
-display: block;
-margin-bottom: 40px;
-font-size: 24px;
-line-height: 38px;
-color: rgba(255, 255, 255, 0.8);
+  display: block;
+  margin-bottom: 40px;
+  font-size: 24px;
+  line-height: 38px;
+  color: rgba(255, 255, 255, 0.8);
 }
 
 .film-description {
-margin-top: 40px;
-width: 423px;
-height: 66px;
-font-size: 16px;
-line-height: 140%;
-color: rgba(255, 255, 255, 0.8);
+  margin-top: 40px;
+  width: 423px;
+  height: 66px;
+  font-size: 16px;
+  line-height: 140%;
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.button {
+  padding: 15px 30px;
+  border: none;
+  border-radius: 5px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.button-icon,
+.button-text {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.button-text {
+  font-size: 14px;
+  line-height: 16px;
+  margin-left: 10px;
+}
+
+.button-prinary {
+  color: #8d0019;
+  background-color: #fff;
+}
+
+.button-link {
+  color: #ffffff;
+}
+
+.button-group {
+  margin-top: 70px;
+}
+
+.venom {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.blood {
+  background: url('../img/blood.png') no-repeat top right,
+    #14131a url('../img/background.jpg') no-repeat center center / 100%;
 }
