--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,25 @@
 ﻿body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   color: #fff;
+  background-color: #14131a;
+}
+
+img {
+  max-width: 100%;
 }
 
 .container {
   max-width: 1140px;
   margin: auto;
+  width: 90%;
+}
+
+.venom {
+  position: absolute;
+  top: 0;
+  right: 0;
+  max-width: 728px;
+  width: 40%;
 }
 
 .header {
@@ -39,19 +53,23 @@
 
 .film-date {
   display: block;
-  margin-bottom: 40px;
+  margin-bottom: 2%;
   font-size: 24px;
   line-height: 38px;
   color: rgba(255, 255, 255, 0.8);
 }
 
 .film-description {
-  margin-top: 40px;
+  margin-top: 3%;
   width: 423px;
   height: 66px;
   font-size: 16px;
   line-height: 140%;
   color: rgba(255, 255, 255, 0.8);
+}
+
+.film-logo {
+  width: 70%;
 }
 
 .button {
@@ -84,16 +102,241 @@
 }
 
 .button-group {
-  margin-top: 70px;
-}
-
-.venom {
-  position: absolute;
-  top: 0;
-  right: 0;
+  margin-top: 5%;
 }
 
 .blood {
-  background: url('../img/blood.png') no-repeat top right,
-    #14131a url('../img/background.jpg') no-repeat center center / 100%;
+  background: url("../img/blood.png") no-repeat top right / 70%,
+    #14131a url("../img/background.jpg") no-repeat center center / 100%;
+}
+
+.primery-bg {
+  background: #14131a url("../img/background.jpg") no-repeat center center /
+    100%;
+}
+
+.content {
+  display: flex;
+}
+.col {
+  flex-basis: 50%;
+}
+
+.content-titile {
+  font-size: 36px;
+  line-height: 42px;
+  color: rgba(255, 255, 255, 0.8);
+  margin-bottom: 20px;
+  margin-top: 0;
+}
+
+.content-text {
+  max-width: 423px;
+  font-size: 16px;
+  line-height: 140%;
+  color: rgba(255, 255, 255, 0.8);
+  margin-bottom: 30px;
+}
+
+.content-subtitile {
+  font-size: 16px;
+  line-height: 140%;
+  color: rgba(255, 255, 255, 0.8);
+  margin-bottom: 15px;
+  margin-top: 0;
+}
+
+.list-item {
+  line-height: 1.5;
+}
+
+.content .list {
+  list-style-type: none;
+  padding: 0;
+}
+
+.column-2 {
+  -webkit-column-count: 2;
+  column-count: 2;
+  column-gap: 20px;
+  max-width: 350px;
+  margin-bottom: 30px;
+}
+
+.content .trailer {
+  width: 356px;
+  height: 205px;
+  background: url(../img/trailer-cover.jpg) no-repeat center / contain;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.trailer .play {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  border: none;
+}
+
+.trailer .play-icon {
+  transform: translate(0px, 2px);
+  cursor: pointer;
+}
+
+.poster-wrapper {
+  display: flex;
+  align-items: start;
+}
+
+.poster {
+  margin-right: 30px;
+}
+
+.poster-wrapper .content-subtitle {
+  margin-bottom: 5px;
+}
+
+.poster-wrapper .content-text {
+  margin-bottom: 20px;
+}
+
+.poster-wrapper {
+  margin: 0;
+  margin-bottom: 20px;
+}
+
+.menu-button {
+  display: none;
+}
+
+.menu-close {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .blood {
+    background: #14131a;
+  }
+  .venom {
+    top: 20%;
+  }
+}
+
+@media (max-width: 620px) {
+  .venom{
+    top:20%;
+    width:30%;
+  }
+
+  .nav-menu {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    z-index: 9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    transform: translateX(100%);
+    transition: transform 0.2s;
+    opacity: 0;
+  }
+  .nav-menu-item {
+    margin-bottom: 2%;
+    margin-top: 2%;
+    margin-right: 0;
+  }
+  .menu-close {
+    opacity: 0;
+    position: fixed;
+    right: 25px;
+    top: 65px;
+    display: flex;
+    align-items: center;
+    z-index: 10;
+    border: none;
+    background: #fff;
+    cursor: pointer;
+    transform: translateX(300%);
+    transition: transform 0.2s;
+    transition-delay: 0.4s;
+  }
+  .menu-active {
+    opacity: 1;
+    transform: translateX(0%);
+  }
+
+  .menu-close-text {
+    margin-right: 10px;
+  }
+  .nav-menu-link {
+    color: black;
+  }
+  .menu-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    border: none;
+    background: #14131a;
+    cursor: pointer;
+    color: #fff;
+  }
+  .nav {
+    margin-left: auto;
+  }
+  .menu-button-text {
+    margin-right: 10px;
+  }
+  .button-group {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .film-text{
+    text-align: center;
+  }
+
+  .poster-wrapper {
+    flex-direction: column;
+  }
+  .poster {
+    margin-bottom: 4%;
+  }
+  .content .trailer {
+    max-width: 350px;
+    width: 100%;
+  }
+  .poster {
+    margin-right: 0;
+    width: 100%;
+    max-width: 350px;
+  }
+  .column-2 {
+    column-count: 1;
+  }
+}
+
+@media (max-width: 1024px) {
+  .header {
+    margin-bottom: 4%;
+  }
+  .film {
+    margin-top: 20%;
+  }
+  .content {
+    flex-direction: column;
+    margin-bottom: 5%;
+  }
+  .col {
+    margin-bottom: 5%;
+  }
 }
